# dynamic-bitset

./: .gitignore  CMakeLists.txt  README.md
include/: dynamic_bitset.hpp  lazy_dynamic_bitset.hpp
src/: main.cpp  test.cpp
test/: bitwise_comp.cpp  external_test.cpp  mixed_comp.cpp  shift_comp.cpp  test.cpp
